--- a/src/App.css
+++ b/src/App.css
@@ -17,12 +17,24 @@ h1 {
     color: antiquewhite;
 }
 
+hr {
+  margin: 0;
+  height: 5px;
+  border: none;
+  background-color: #d6d6d6;
+}
+
+.imageArea {
+  height: 400px;
+}
+
 .prompt-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100px;
+    max-height: fit-content;
     width: 100vw;
     background-color: #1a1a1a;
 }
